2012-10-08 Build User <jenkins@coast-project.org>

      
      PKGBUILD prepared for new jenkins-ci version 1.485


2012-10-01 Build User <jenkins@coast-project.org>

      jenkins-ci-1.484-1:
      PKGBUILD prepared for new jenkins-ci version 1.484


2012-09-24 Build User <jenkins@coast-project.org>

      jenkins-ci-1.483-1:
      PKGBUILD prepared for new jenkins-ci version 1.483


2012-09-17 Build User <jenkins@coast-project.org>

      jenkins-ci-1.482-1:
      PKGBUILD prepared for new jenkins-ci version 1.482


2012-09-10 Build User <jenkins@coast-project.org>

      jenkins-ci-1.481-1:
      PKGBUILD prepared for new jenkins-ci version 1.481


2012-09-03 Build User <jenkins@coast-project.org>

      jenkins-ci-1.480-1:
      PKGBUILD prepared for new jenkins-ci version 1.480


2012-08-30 Marcel Huber <marcelhuberfoo@gmail.com>

     
      adjusted systemd description and added more limit settings


2012-08-30 Marcel Huber <marcelhuberfoo@gmail.com>

      jenkins-ci-1.479-1:
      PKGBUILD prepared for new jenkins-ci version 1.479


2012-08-22 Marcel Huber <marcelhuberfoo@gmail.com>

      jenkins-ci-1.478-1:
      readded JENKINS_HOME setting in conf.d/jenkins

      limiting data size in systemd.service file


2012-08-21 Build User <jenkins@coast-project.org>

     
      corrected checksum of war file


2012-08-21 Marcel Huber <marcelhuberfoo@gmail.com>

     
      update to jenkins 1.478


2012-08-17 Marcel Huber <marcelhuberfoo@gmail.com>

     
      streamlined systemd start script

      not using fork and bash anymore but using systemd features


2012-08-15 Marcel Huber <marcelhuberfoo@gmail.com>

     
      setting heap and stack size limit defaults


2012-08-13 Marcel Huber <marcelhuberfoo@gmail.com>

      jenkins-ci-1.477-1:
      corrected download url to use pkgver


2012-08-10 Marcel Huber <marcelhuberfoo@gmail.com>

     
      changelog added


2012-08-10 Marcel Huber <marcelhuberfoo@gmail.com>

     
      corrected rc.d start script
