@@ -1,7 +1,7 @@
 # Maintainer: hydro <hydro@freenet.de>
 
 pkgname=makemkv
-pkgver=1.7.7
+pkgver=1.7.8
 pkgrel=1
 pkgdesc="DVD and Blu-ray to MKV converter and network streamer"
 arch=('i686' 'x86_64')
@@ -11,8 +11,8 @@ depends=('qt')
 install=makemkv.install
 source=(${url}/download/${pkgname}-bin-${pkgver}.tar.gz
         ${url}/download/${pkgname}-oss-${pkgver}.tar.gz)
-md5sums=('c5def819651e6758357a95dc77e48d01'
-         '68ec2f0654b0b826ed3ba3b31d99dc5e')
+md5sums=('01058f1cdb35006d3b32bee70835768d'
+         '2099c28294f4d5578058ad312fe0d459')
 
 build() {
   cd $srcdir/${pkgname}-oss-${pkgver}
