@@ -6,7 +6,7 @@ Name=QTalarm
 GenericName=QTalarm
 Comment= A nifty alarm clock written in QT
 Icon=1349069370_Alarm_Clock.png
-Exec=QTalarm
+Exec=qtalarm
 Categories=Application;Utility;
 
 
