@@ -1,14 +1,14 @@
 # Contributor: Ng Oon-Ee <ngoonee.talk@gmail.com>
 # Based on rainlendar-beta by Blasse <koralik(at)gmail(dot)com>
 pkgname=rainlendar-beta-unstable
-pkgver=2.11.b123
+pkgver=2.11.b125
 pkgrel=1
 if [ "${CARCH}" = 'i686' ]; then
   source=(http://www.rainlendar.net/download/Rainlendar-$pkgver-i386.tar.bz2)
-  md5sums=('0ee002f2846018ffaf213130894decf8')
+  md5sums=('08a8391b2952237f5149e99958eef902')
 else
   source=(http://www.rainlendar.net/download/Rainlendar-$pkgver-amd64.tar.bz2)
-  md5sums=('77ec6c1f416cbd84055f48e65c5feb85')
+  md5sums=('614727eb9284057f61b0958b1b5527eb')
 fi
 
 pkgdesc="A desktop Calendar, ToDo list and Event list. An unstable (untested) beta version."
