@@ -9,7 +9,8 @@ arch=('any')
 url="https://github.com/teramako/wat/"
 license=('GPL2' 'MPL' 'LGPL2.1')
 makedepends=('zip') #for build.sh
-depends=("thunderbird")
+depends=('thunderbird')
+install='tb-wat.install'
 source=(teramako-wat-version-1.3.4-38-g${_gver}.zip::https://nodeload.github.com/teramako/wat/zipball/master)
 md5sums=('e810e992b0aed3682a2aa61cf05a9e97')
 
