@@ -1,0 +1,11 @@
+post_install() {
+    
+    echo ">>> Useful shortcuts to know"
+    echo ">>> Back: Alt-Left or Ctrl-[ or BS"
+    echo ">>> Forward: Alt-Right or Ctrl-] or Shift-BS"
+}
+
+post_upgrade() {
+    post_install $1
+}
+
